77: Refactor quantity impl
Task-Url: https://github.com/unitsofmeasurement/si-units/issues/77